# bioimageio-chatbot

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README_old.md  development.md  knowledge-base-manifest.yaml  manifest.yaml  pyproject.toml  quota_manager.db  requirements.txt  tmp-user-image.tiff
.github/workflows/: build.yml  publish.yml
bioimageio_chatbot/: 2023-12-07_incorporate_cellpose_db.ipynb  __main__.py  assistant_app.py  biii.py  build_assistant.py  chatbot.py  evaluation.py  gpts_action.py  image_processor.py  jsonschema_pydantic.py  knowledge_base.py  parent_retriever.py  quota.py  tools.py  utils.py
bioimageio_chatbot/apps/: index.html
bioimageio_chatbot/chatbot_extensions/: __init__.py  bia_extension.py  biii_extension.py  docs_extension.py  euro_bioimaging_extension.py  extensions.json  google_patent_extension.py  hpa_extension.py  image_sc_extension.py  interface.py  vision_extension.py
bioimageio_chatbot/static/: bioimage-model-zoo-extension.imjoy.html  imagej-js-extension.imjoy.html  index.html  pyodide-worker.js  (+2 more)
bot/: convert_md_to_txt.py  create-vectordb.py  create_vectordb.py  start-BMZ-chatbot.py
docs/: BIOChatBotvsChatGPT.md  Beta-testing-guidelines.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  Usage_example.md  _sidebar.md  beta-testing-guidelines.md  bioimage-chatbot-extension-tutorial.ipynb  creating_GPTs.md  development.md  examples.md  figure-2-use-cases.md  index.html  installation.md  technical-overview.md  usage-example.md
scripts/: create-knowledge-base.py  create-vectordb.py  index-template.html  publish.sh  start-bioimageio-chatbot.py
static/: index.html
tests/: 2023-11--28_image_search.ipynb  2023-12-01_test-sim_schemes.ipynb  2023-12-04_test-image-prep.ipynb  2023-12-07_incorporate_cellpose_db.ipynb  2023-12-07_test-cellpose.ipynb  2023-12-08_axes_3.py  2023-12-08_axes_guesser_backup.py  2023-12-08_axis_guessing.ipynb  2023-12-08_test_axis.py  2023-12-08_test_axis_2.py  2023-12-10_test_incorporation.ipynb  2023-12-10_test_with_cellpose.ipynb  2023-12-11_live-session.ipynb  2024-12-06_debug_resizing.ipynb  Knowledge-Retrieval-Evaluation-Results.csv  image_processor.py  image_search.ipynb  image_search.py  query_answer.yaml  test_chatbot.py  test_chatbot_answer.py  test_eval_agent.py  test_evaluate_queries.py  test_evaluate_tvalmetrics.py  test_gemini_chatbot.py  test_knowledge_base.py  test_retreive_channel.py  test_show_score_result.ipynb
(+15 files in other folders)
