[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bioimageio-chatbot"
version = "0.1.56"
readme = "README.md"
description = "Your Personal Assistant in BioImage Analysis."
dependencies = [
  "schema-agents>=0.1.36",
  "imjoy-rpc",
  "requests",
  "pypdf",
  "hypha",
  "tqdm",
  "aiofiles",
  "langchain>=0.1.6",
  "beautifulsoup4",
  "pandas",
  "duckduckgo-search<=4.2.0",
  "rank-bm25",
  "langchain-openai",
  "langchain-community",
  "html2text",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bioimageio_chatbot*"]
exclude = ["tests*", "scripts*"]

[options.entry_points]
console_scripts = [
    "bioimageio-chatbot = bioimageio_chatbot.__main__:main",
]
