[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bioimageio-chatbot"
version = "0.2.12"
readme = "README.md"
description = "Your Personal Assistant in Computational BioImaging."
dependencies = [
  "schema-agents>=0.1.59",
  "hypha-rpc>=0.20.38",
  "requests",
  "pypdf",
  "pillow",
  "matplotlib",
  "hypha>=0.15.52,<0.20.0",
  "tqdm",
  "aiofiles",
  "langchain>=0.1.6",
  "beautifulsoup4",
  "pandas",
  "duckduckgo-search>=6.1.5",
  "rank-bm25",
  "langchain-openai",
  "langchain-core>=0.1.31",
  "langchain-community>=0.0.27",
  "html2text",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bioimageio_chatbot*"]
exclude = ["tests*", "scripts*"]

[options.entry_points]
console_scripts = [
    "bioimageio-chatbot = bioimageio_chatbot.__main__:main",
]
